packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_optimization_issue_3542.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 769
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const AtomStatus = component$(({ctx,atom})=>{
	let status = atom.status;
	if(!atom.real) {
		status="WILL-VANISH"
	} else if (JSON.stringify(atom.atom)==JSON.stringify(atom.real)) {
		status="WTFED"
	}
	return (
		<span title={atom.ID} onClick$={(ev)=>atomStatusClick(ctx,ev,[atom])} class={["atom",status,ctx.store[atom.ID]?"selected":null]}>
		</span>
	);
})

============================= test.jsx ==

import { componentQrl } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
//
const AtomStatus_component_span_q_e_click_0yqKAycyBF0 = (ev)=>{
    const _rawProps = _captures[0];
    return atomStatusClick(_rawProps.ctx, ev, [
        _rawProps.atom
    ]);
};
//
const _qrl_AtomStatus_component_span_q_e_click_0yqKAycyBF0 = /*#__PURE__*/ inlinedQrl(AtomStatus_component_span_q_e_click_0yqKAycyBF0, "AtomStatus_component_span_q_e_click_0yqKAycyBF0");
//
const AtomStatus_component_hdwpoUtydSA = (_rawProps)=>{
    let status = _rawProps.atom.status;
    if (!_rawProps.atom.real) status = "WILL-VANISH";
    else if (JSON.stringify(_rawProps.atom.atom) == JSON.stringify(_rawProps.atom.real)) status = "WTFED";
    return <span title={_rawProps.atom.ID} q-e:click={_qrl_AtomStatus_component_span_q_e_click_0yqKAycyBF0.$withCaptures$([
        _rawProps
    ])} class={[
        "atom",
        status,
        _rawProps.ctx.store[_rawProps.atom.ID] ? "selected" : null
    ]}>
		</span>;
};
//
const _qrl_AtomStatus_component_hdwpoUtydSA = /*#__PURE__*/ inlinedQrl(AtomStatus_component_hdwpoUtydSA, "AtomStatus_component_hdwpoUtydSA");
//
export const AtomStatus = /*#__PURE__*/ componentQrl(_qrl_AtomStatus_component_hdwpoUtydSA);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;wDAWkC,CAAC;;WAAK,0BARD,KAQqB,IAAG;kBARpB;KAQ0B;;;;;yCARhC;IACpC,IAAI,SAAS,UAD6B,KACxB,MAAM;IACxB,IAAG,CAAC,UAFsC,KAEjC,IAAI,EACZ,SAAO;SACD,IAAI,KAAK,SAAS,CAAC,UAJgB,KAIX,IAAI,KAAG,KAAK,SAAS,CAAC,UAJX,KAIgB,IAAI,GAC7D,SAAO;IAER,QACE,KAAK,OAAO,UAR4B,KAQvB,EAAE,EAAE;;QAAgD,OAAO;QAAC;QAAO;QAAO,UARvD,IAQ2D,KAAK,CAAC,UAR7D,KAQkE,EAAE,CAAC,GAAC,aAAW;KAAK,EAAE;EACjI,EAAE;AAEJ;;;;AAXA,OAAO,MAAM,2BAAa,oDAWxB\"}")
== DIAGNOSTICS ==

[]
