packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_optimization_issue_4386.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 741
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const FOO_MAPPING = {
	A: 1,
	B: 2,
	C: 3,
	};

	export default component$(() => {
	const key = 'A';
	const value = FOO_MAPPING[key];

	return <>{value}</>;
	});

============================= test.jsx ==

import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
//
export const FOO_MAPPING = {
    A: 1,
    B: 2,
    C: 3
};
const test_component_LUXeXe0DQrg = ()=>{
    return <>{FOO_MAPPING['A']}</>;
};
//
const _qrl_test_component_LUXeXe0DQrg = /*#__PURE__*/ inlinedQrl(test_component_LUXeXe0DQrg, "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(_qrl_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAGA,OAAO,MAAM,cAAc;IAC1B,GAAG;IACH,GAAG;IACH,GAAG;AACH,EAAE;mCAEwB;IAI1B,UAFc,WAAW,CADb,IACkB;AAG9B;;;;AALA,6BAAe,8CAKZ\"}")
== DIAGNOSTICS ==

[]
